# plasma-applet-resources-monitor

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  cliff.toml  debug_graphs.txt  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  custom.md  feature_request.md  feature_request.yaml
.github/PULL_REQUEST_TEMPLATE/: translation.md
.github/workflows/: release.yml
arch-linux/: PKGBUILD
org.kde.resourcesMonitor/: metadata.desktop
org.kde.resourcesMonitor/contents/config/: main.xml
org.kde.resourcesMonitor/contents/ui/: HistoryGraph.qml  main.qml
org.kde.resourcesMonitor/contents/ui/config/: ConfigGeneral.qml
package/: metadata.desktop  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: GraphLayout.qml  HistoryGraph.qml  main.qml
package/contents/ui/code/: dialect.js  formatter.js  graphs.js  network.js
package/contents/ui/components/: AppLauncher.qml  ApplicationDelegateItem.qml  AppsDetector.qml  BaseSensorGraph.qml  ColorSelector.qml  CustomizableSize.qml  DoubleSpinBox.qml  GpuDetector.qml  GraphItem.qml  GraphText.qml  HistoryGraph.qml  NetworkGraph.qml  NetworkInterfaceDetector.qml  PlotData.qml  PlotterCanvas.qml  SensorData.qml  SensorDetector.qml  SensorGraph.qml  SpinBox.qml  SpinBoxTextInput.qml  TextContainer.qml  functions.js  (+2 more)
package/translate/: README.md  de.po  fr.po  nl.po  template.pot  zh_CN.po
scripts/: archive.js  bump.js  changelog.sh  package.sh  real-test.sh  release.sh  test.sh  translate-build.sh  translate-merge.sh
(+66 files in other folders)
